--- a/stylesheet.css
+++ b/stylesheet.css
@@ -553,7 +553,7 @@ footer a:hover {
     border-style: solid;
     box-shadow: 0 4px 10px 0 #007BFF;
 }
-@media screen and (min-width: 900px) and (not (max-height: 500px)) {
+@media screen and (min-device-width: 900px) and (not (max-device-height: 500px)) {
     .asidefooter {
         padding-left: 29%;
     }
