--- a/stylesheet.css
+++ b/stylesheet.css
@@ -354,6 +354,9 @@ article img {
 #imgdescription{
     text-align: center;
 }
+.imgdescription{
+    text-align: center;
+}
 .linkbutton {
     margin-left: 15%;
     margin-right: 15%;
