--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,19 +54,27 @@ section, div {
 .logo {
     float: left;
     height: 100%;
-    width: 22%;
+    width: auto;
 }
 .headertext {
     float: left;
-    width: 88%;
+    width: auto;
     margin: auto;
+    font-size: 170%;
     text-align: center;
     color: #007BFF;
+    font-family: 'Anton';
+    font-style: normal;
+    text-decoration: underline;
+    letter-spacing: 2px;
+    src: url(https://fonts.gstatic.com/s/anton/v25/1Ptgg87LROyAm3Kz-C8.woff2) format('woff2');
+    text-shadow: 1px 0 10px rgb(0, 0, 0);
 }
 header {
     background-color: #000000;
     height: 100px;
     width: 100%;
+    margin-top: 0px;
 }
 /* Removes hover effect from header logo*/
 .logo img:hover{
@@ -163,6 +171,9 @@ li.nav {
         float: none;
         display: block;
         text-align: left;
+    }
+    .headertext {
+        font-size: 150%;
     }
 }
 .nav a {
