--- a/stylesheet.css
+++ b/stylesheet.css
@@ -174,6 +174,7 @@ li.nav {
     }
     .headertext {
         font-size: 150%;
+        text-shadow: 1px 0 6px rgb(0, 0, 0);
     }
 }
 .nav a {
@@ -589,7 +590,8 @@ footer a:hover {
     /* Makes header text fill screen, stops overflow into nav bar on very small screens.*/
     .headertext {
         width: 100%;
-        font-size: 80%;
+        font-size: 83%;
+        text-shadow: 0 0 2px rgb(0, 0, 0);
         overflow: hidden;
     }
     /* Makes welcome text fill screen*/
