--- a/stylesheet.css
+++ b/stylesheet.css
@@ -435,44 +435,36 @@ aside h2 {
         margin: auto;
     }
 }
-/* About and Contact */
-.about {
-    margin-top: 1%;
-    width: 49%;
-    float: left;
-    margin-bottom: 80px;
-}
-.about img {
-    width: 40%;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-}
-.about h1 {
-    text-align: center;
-    font-size: 200%;
-    font-weight: bold;
-}
+/* Contact */
 .contact {
     margin-top: 1%;
-    width: 49%;
-    background-color: #007BFF;
+    width: 80%;
+    max-width: 2000px;
+    background-color: #222222;
     color: #ffffff;
-    float: left;
-    margin-bottom: 80px;
+    margin: auto;
+    margin-bottom: 1%;
+    padding-bottom: 5px;
+    transition: 0.2s;
 }
 .contact p {
-    margin: 1%;
-}
-.contact p, .contact h2 {
+    margin:auto;
+    padding: 5px;
+    max-width: 75ch;
     text-align: center;
+}
+ .contact h1 {
+    text-align: center;
+    padding-top: 10px;
 }
 /* Contact Form */
 .contact-form {
     margin: 1%;
-    padding: 20px;
-    background-color: #f5f5f5;
-    color: #000000;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+    background-color: #000000;
+    color: #ffffff;
 }
 .contact-form label {
     font-weight: bold;
@@ -483,9 +475,11 @@ aside h2 {
     width: 97%;
     padding: 1%;
     margin-bottom: 10px;
-    border: 2px solid #007BFF;
+    border: 2px solid #ffffff;
     border-radius: 10px;
     font-family: sans-serif;
+    background-color: #007BFF;
+    color: #ffffff;
 }
 .contact-form textarea {
     resize: vertical;
@@ -494,24 +488,30 @@ aside h2 {
     min-width: fit-content;
     width: 50%;
     padding: 15px;
-    background-color: #007BFF;
-    color: #ffffff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 120%;
-    display: block;
-    margin: 0 auto;
-}
-.contact-form input[type="submit"]:hover {
-    background-color: #000000;
+    background-color: #222222;
+    border-color: #000000;
     color: #ffffff;
     text-decoration: underline;
-    font-weight: bold;
+    border-style: solid;
+    cursor: pointer;
+    font-size: 110%;
+    display: block;
+    margin: auto;
+    margin-bottom: 5px;
+    transition: 0.2s;
+}
+.contact-form input[type="submit"]:hover {
+    color: #007BFF;
+    border-color: #007BFF;
+    background-color: #000000;
+    text-decoration: underline;
+    box-shadow: 0 4px 10px 0 #007BFF;
 }
 .contact-form input:invalid,
 .contact-form textarea:invalid {
   border-color: red;
+  background-color: #222222;
+  color: #ffffff;
 }
 /* Footer */
 footer {
@@ -540,6 +540,7 @@ footer a {
 footer a:hover {
     background-color: #000000;
     border-color: #007BFF;
+    color: #007BFF;
     border-style: solid;
     box-shadow: 0 4px 10px 0 #007BFF;
 }
@@ -569,12 +570,16 @@ footer a:hover {
 .sitemap a:hover {
     background-color: #000000;
     border-color: #007BFF;
+    color: #007BFF;
     border-style: solid;
     box-shadow: 0 4px 10px 0 #007BFF;
 }
 @media screen and (min-width: 900px){
     .asidefooter {
         padding-left: 29%;
+    }
+    .contact{
+        width: 60%;
     }
 }
 /* Responsive design Mobile */
@@ -607,6 +612,9 @@ footer a:hover {
     /* Makes about section fill screen*/
     .contact{
         width: 100%;
+    }
+    .about{
+        display: none;
     }
     /* Makes Footer smaller*/
     footer  {
@@ -647,13 +655,6 @@ footer a:hover {
     .articles {
         background-color: #222222;
     }
-    /* Contact Form colour */
-    .contact-form {
-        margin: 1%;
-        padding: 20px;
-        background-color: #222222;
-        color: #ffffff;
-    }
     .pagewelcome {
         background-color: #000000;
         color: #ffffff;
@@ -675,4 +676,8 @@ pre {
     display: block;
     width: fit-content;
     margin: auto;
+}
+.linkwhite {
+    color: #ffffff;
+    font-weight: bold;
 }
