--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,22 @@ body{
     font-family: Arial, sans-serif;
     overscroll-behavior: none;
     margin: 0;
+    transition: opacity 5s;
 }
+@view-transition {
+  navigation: auto;
+}
+@keyframes fadeInZoom {
+    0% {
+        opacity: 0;
+        transform: scale(0.5);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
 p {
     max-width: 85ch;
     margin-left: auto;
@@ -87,6 +102,8 @@ header {
     padding: 0; /* Remove default padding */
     line-height: 1.2; /* Adjust line height */
     margin-top: 0.5em; /* Adjust top margin to create space */
+    opacity: 0;
+    animation: fadeInZoom 0.3s ease-in-out forwards;
 }
 img { /* Fixes images being too large */
     width: 100%;
