--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,19 +3,22 @@ body{
     font-family: Arial, sans-serif;
     overscroll-behavior: none;
     margin: 0;
-    transition: opacity 5s;
+    opacity: 0;
+    animation: fadeInZoom 0.3s ease-in-out forwards;
+    animation-delay: 0.05s;
 }
 @view-transition {
   navigation: auto;
 }
 @keyframes fadeInZoom {
     0% {
-        opacity: 0;
-        transform: scale(0.5);
+        transform: scale(0.9);
+        top: 0;
     }
     100% {
         opacity: 1;
         transform: scale(1);
+        top: 0;
     }
 }
 
@@ -102,8 +105,6 @@ header {
     padding: 0; /* Remove default padding */
     line-height: 1.2; /* Adjust line height */
     margin-top: 0.5em; /* Adjust top margin to create space */
-    opacity: 0;
-    animation: fadeInZoom 0.3s ease-in-out forwards;
 }
 img { /* Fixes images being too large */
     width: 100%;
