Scroll and performance possible fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@ body{
     overscroll-behavior: none;
     margin: 0;
 }
-img, article, .headertext, .contact, .black {
+article, .headertext, .contact, .black {
     opacity: 0;
     animation: fadeInZoom 0.3s forwards;
     animation-delay: 0.1s;
