--- a/stylesheet.css
+++ b/stylesheet.css
@@ -629,8 +629,8 @@ th {
 }
 /* Sitemap */
 .sitemap {
-    background-color: #222222;
-    color: #ffffff;
+    background-color: #f5f5f5;
+    color: #000000;
     padding: 2%;
 }
 .sitemap a {
@@ -641,7 +641,6 @@ th {
     border-color: #222222;
     background-image: linear-gradient(#333333, #111111);
     background-color: #222222;
-
     border-style: solid;
 }
 .sitemap a:hover {
@@ -750,9 +749,10 @@ th {
         background-color: #ffffff;
         color: #000000;
     }
-}
-.black {
-    background-color: #000000;
+    .sitemap {
+        background-color: #222222;
+        color: #ffffff;
+    }
 }
 pre {
     background-color: #f1f1f1;
@@ -764,4 +764,7 @@ pre {
 .linkwhite {
     color: #ffffff;
     font-weight: bold;
+}
+.l2 {
+    padding-left: 5%;
 }
