--- a/stylesheet.css
+++ b/stylesheet.css
@@ -335,6 +335,12 @@ li.nav {
     box-sizing: border-box; 
     min-height: inherit;
 }
+.safari9 .featuredarticle {
+    width: 32%;
+    float: left;
+    box-sizing: border-box; 
+    min-height: inherit;
+}
 /* Article */
 article {
     width: 68%;
